--- a/DIO/api-dio-node/package.json
+++ b/DIO/api-dio-node/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
@@ -19,6 +20,7 @@
     "express": "^4.18.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.10",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   }
 }
